# FinRobot_Project

./: .env.example  .gitignore  API_SETUP_GUIDE.md  DOCUMENTATION_INDEX.md  EMAIL_SETUP_GUIDE.md  GEMINI_INTEGRATION.md  IOS_SHORTCUT_GUIDE.md  MOBILE_TRIGGER_GUIDE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  TELEGRAM_BOT_SETUP.md  email_service.py  example_basic.py  example_gemini.py  main.py  pyproject.toml  run_analysis.sh  start_telegram_bot.sh  stop_telegram_bot.sh  telegram_bot.py  test_api.py  test_shortcuts.sh
